# MicroPython_DS3502

./: README.rst  pyproject.toml
docs/: api.rst  conf.py
examples/: ds3502_simpletest.py
micropython_ds3502/: ds3502.py
